modal z-index fixed

--- a/src/components/Modal UI/Styles.module.css
+++ b/src/components/Modal UI/Styles.module.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99;
+  z-index: 1021;
 }
 
 .modal {
@@ -24,14 +24,7 @@
   text-align: center;
   /* transition: 250ms ease-in; */
   transition: height 5s ease;
-  
-  }
-
-
-
-
-
-
+}
 
 .modalClose {
   margin-top: 20px;
@@ -125,5 +118,4 @@
   height: 30px;
   background-color: black;
   text-transform: uppercase;
-  
 }
